--- a/style.css
+++ b/style.css
@@ -1,73 +1,119 @@
-
-
 #navbar {
-    overflow: hidden;
-    background-color: white;
-  }
-
-.logo{
-  max-width: 10%;  
-  height: auto;  
-  display: block; 
-}
-  
-  /* Navbar links */
-  #navbar a {
-    float: left;
-    display:block;
-    color: black;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-    
-  }
-  
-  /* Page content */
-  .content {
-    padding: 16px;
-  }
-  
-  /* The sticky class is added to the navbar with JS when it reaches its scroll position */
-  .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
-  
-  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-  .sticky + .content {
-    padding-top: 60px;
-  }
-
-
-
-
-
-
-
-
-
-body{
-    overflow-x: hidden;
-    /* What could you use to center the content in the body easily? */
-    justify-items: center;
-    margin: 20px;
-    background-color: burlywood;
+  overflow: hidden;
+  background-color: white;
 }
 
-.grid-cont{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
-    grid-gap: 5px; 
-    grid-row-gap: 5px;
+.logo {
+  max-width: 10%;
+  height: auto;
+  display: block;
 }
 
+/* Navbar links */
+#navbar a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
 
-.img-cont img  {
-    width: 100%;
-    height: 100%;
+/* Page content */
+.content {
+  padding: 16px;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
+}
+
+body {
+  overflow-x: hidden;
+  /* What could you use to center the content in the body easily? */
+  justify-items: center;
+  margin: 20px;
+  background-color: burlywood;
+}
+
+.grid-cont {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 5px;
+  grid-row-gap: 5px;
+}
+
+.img-cont img {
+  width: 100%;
+  height: 100%;
 }
 
 .img-cont:hover {
-    transform: scale(1.25); /* (125% zoom) */
-  }
+  transform: scale(1.25); /* (125% zoom) */
+}
+
+/********* For Booking Page ***************/
+body {
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+.booking-container {
+  background-color: #fafafa;
+  /* margin: 3rem;
+  margin-left: 10rem; */
+  box-shadow: 10px 15px 20px rgba(0, 0, 0, 0.1);
+}
+
+.container-time {
+  background-color: black;
+  padding: 5rem;
+  outline: 3px dashed #998100;
+  outline-offset: -30px;
+  text-align: center;
+}
+
+.heading {
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin-top: 6rem;
+}
+
+.heading-form {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.heading-days {
+  color: #998100;
+  font-size: 2rem;
+}
+
+.heading-phone {
+  font-size: 1.5rem;
+}
+
+/* form styles  */
+
+.container-form {
+  padding: 5rem;
+  margin: 0 auto;
+  color: black;
+}
+
+.form-group {
+  padding: 1rem;
+}
+
+.input-group-text {
+  height: 3rem;
+}
