--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@ body {
   width: 100%;
   height: 100%;
 }
-
+/* Hovering over image with scale and fading settings set */
 .img-cont:hover {
   transform: scale(1.25);
   /* (125% zoom) */
@@ -68,6 +68,7 @@ body {
       transition: all 1s ease;
   }
 
+  /* Text that appears once hovered */
   .hovercap {
     /* (C1) DIMENSIONS */
     width: 100%;
